test/e2e/testdata/metrics-stat-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tcp-stat-name-backend-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: tcp
      protocol: TCP
      port: 8080
      allowedRoutes:
        kinds:
          - kind: TCPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: tcp-route-stat-name
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tcp-stat-name-backend-gateway
      sectionName: tcp
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: tcp-route-stat-name
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: tcp-route-stat-name
  telemetry:
    metrics:
      routeStatName: "%ROUTE_NAMESPACE%/%ROUTE_NAME%"
